# Flask_framework

./: .gitignore  README.md  pyproject.toml  wsgi.py
blog/: app.py  db.sqlite
blog/articles/: views.py
blog/auth/: views.py
blog/templates/: base.html  navbar.html
blog/templates/articles/: details.html  list.html
blog/templates/auth/: login.html
blog/templates/users/: details.html  list.html
blog/user/: views.py
lesson_1/: pyproject.toml  wsgi.py
lesson_1/blog/: app.py
