[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["toporovv <top.vetal@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
Flask-SQLAlchemy = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
